# 1c-price-bot

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
docs/: architecture.md  configuration.md  database-scenarios.md  database.md  mcp-contract.md  quote-template.md  scope.md  testing-scenarios.md
docs/decisions/: 0001-v1-shape.md  0002-runtime-markdown-rules.md
docs/review/: techlead_review_active.md  techlead_review_closure_plan.md
openspec/: config.yaml  project.md
openspec/changes/v1-implementation/: design.md  proposal.md  tasks.md
openspec/changes/v1-implementation/specs/common-config/: spec.md
openspec/changes/v1-implementation/specs/llm-client/: spec.md
openspec/changes/v1-implementation/specs/mcp-adapter/: spec.md
openspec/changes/v1-implementation/specs/quote-service/: spec.md
openspec/changes/v1-implementation/specs/renderer/: spec.md
openspec/changes/v1-implementation/specs/storage/: spec.md
rules/: bundles.md  licensing.md  quote-behavior.md  upgrades.md
src/price_bot/bot/: main.py
src/price_bot/common/: config.py  exceptions.py  types.py
src/price_bot/llm/: client.py  context.py  rules.py
src/price_bot/mcp/: client.py
src/price_bot/quotes/: renderer.py  service.py
src/price_bot/storage/: db.py
src/price_bot/storage/repositories/: conversations.py  drafts.py  generated_quotes.py  items.py  messages.py  users.py
templates/: quote.md.j2
tests/: test_common_config.py  test_common_exceptions.py  test_common_types.py  test_llm_client_validation.py  test_llm_context.py  test_llm_rules.py
(+1 files in other folders)
